# tfstater

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.yaml  pyproject.toml
.github/workflows/: docker.yml  helm.yml
charts/tfstater/: Chart.yaml  values.yaml
charts/tfstater/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/tfstater/templates/hooks/: job-admin-user.yaml  job-migrations.yaml
fe/components/: package-lock.json  package.json  tailwind.config.js
fe/components/src/: build.js
fe/components/src/components/: ApiKey.ce.vue  ConfirmButton.vue  StateList.ce.vue  StateListElement.vue  UserManage.ce.vue
fe/css/: package-lock.json  tailwind.config.js
fe/css/src/: tailwind.css
tfstater/: __init__.py  commands.py  config.py  helpers.py  idp.py  s3.py
tfstater/api/: __init__.py  _pipes.py  states.py  terraform.py
tfstater/config/: app.yml.example
tfstater/migrations/: a89e14c5883b_initial_migration.py
tfstater/models/: __init__.py  auth.py  states.py
tfstater/static/css/: main.css
tfstater/templates/: _header.html  index.html  layout.html  settings.html
tfstater/templates/auth/: layout.html  login.html  password_change.html  password_reset.html  password_retrieval.html  registration.html
tfstater/templates/auth/_idp/: button.html
tfstater/views/: __init__.py  accounts.py  main.py
